Bug 105942 - Graphical artefacts after update to mesa 18.0.0-2
Summary: Graphical artefacts after update to mesa 18.0.0-2
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: 18.0
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-08 12:17 UTC by kaspar.tint
Modified: 2018-04-18 19:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
graphical artefacts (886.93 KB, image/png)
2018-04-08 12:17 UTC, kaspar.tint
Details

Description kaspar.tint 2018-04-08 12:17:22 UTC
Created attachment 138681 [details]
graphical artefacts

With Vulkan renderer I see strange artefacts in Dota 2. Did not happen with mesa 17.

Have a look at attachment.

System info:

➜  ~ phoronix-test-suite system-info

Phoronix Test Suite v7.6.0
System Information


  PROCESSOR:          Intel Core i5-4570 @ 3.60GHz
    Core Count:       4
    Extensions:       SSE 4.2 + AVX2 + AVX + RDRAND + FSGSBASE
    Cache Size:       6144 KB
    Microcode:        0x24
    Scaling Driver:   intel_pstate powersave

  GRAPHICS:           MSI AMD Radeon RX 470/480/570/580 8192MB
    Display Driver:   modesetting 1.19.1
    Monitor:          BenQ xl2411t
    Screen:           1920x1080

  MOTHERBOARD:        ASUS B85-PLUS
    Memory:           16384MB
    Chipset:          Intel 4th Gen Core DRAM
    Network:          Realtek RTL8111/8168/8411

  DISK:               128GB Samsung SSD 840 + 1000GB Seagate ST1000DM010-2DM1 + 1000GB Seagate ST1000DM003-1CH1
    File-System:      btrfs
    Mount Options:    relatime rw space_cache ssd subvol=/ subvolid=5
    Disk Scheduler:   CFQ

  OPERATING SYSTEM:   Arch rolling
    Kernel:           4.15.15-1-ARCH (x86_64)
    Desktop:          GNOME Shell 3.28.0
    Compiler:         GCC 7.3.1 20180312
Comment 1 Bas Nieuwenhuizen 2018-04-08 12:49:11 UTC
What GPU do you have?

Also how do you get to the screen shown in the artifact screenshot?
Comment 2 kaspar.tint 2018-04-08 18:28:11 UTC
An RX 480. The screen appears after queuing for a game in dota. Once the matchmaking system finds a suitable game for you, such pop-up will appear in the game for you so you can decide to either join or cancel.
Comment 3 Dan Ginsburg 2018-04-09 13:20:51 UTC
Here are repro instructions on how to get to that screen in Dota without having to join a public match:

1. Go to Arcade -> Overthrow
2. Create Custom Lobby
3. Set lobby password
4. Create
5. Click Start Game
Comment 4 Bas Nieuwenhuizen 2018-04-09 14:26:14 UTC
Bisected it to

commit ad11fc3571e025b22d9feed80a7f499665f7a255 (refs/bisect/bad)
Author: Dave Airlie <airlied@redhat.com>
Date:   Thu Jan 11 08:02:52 2018 +1000

    radv: don't emit unneeded vertex state.
    
    If the number of instances hasn't changed and we've already
    emitted it, don't emit it again.
    
    If the vertex shader is the same and the first_instance, vertex_offset
    haven't changed don't emit them again.
    
    This increases the fps in GL_vs_VK -t 1 -m -api vk from around 40
    to around 60 here, it may not impact anything else.
    
    Dieter also reported smoketest going from 1060->1200 fps.
    
    Reviewed-by: Bas Nieuwenhuizen <bas@basnieuwenhuizen.nl>
    Reviewed-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>
    Tested-by: Dieter Nützel <Dieter@nuetzel-hh.de>
    Signed-off-by: Dave Airlie <airlied@redhat.com>


(with LLVM 5)
Comment 6 kaspar.tint 2018-04-10 20:16:52 UTC
Thank you!

I my self probably don't have the know-how to compile & replace your patched mesa with my system's mesa to verify the fix.
Comment 7 Bas Nieuwenhuizen 2018-04-10 21:34:28 UTC
Since you use Arch, it may be worth building/running

https://aur.archlinux.org/packages/mesa-git/
Comment 8 kaspar.tint 2018-04-18 19:18:39 UTC
Can confirm that since mesa 18.0.1-1 the issue has been fixed for me.

Thank you for the work!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.